# handler/userAnswer/createUserAnswer.go
@@ -1,4 +1,4 @@
-package userAnswer
+package userQuestion
 
 import (
 	"fmt"
@@ -10,16 +10,16 @@ import (
 
 // @BasePath /api/v1
 
-// @Summary Create userAnswer
-// @Description Create a new job userAnswer
-// @Tags UserAnswer
+// @Summary Create userQuestion
+// @Description Create a new job userQuestion
+// @Tags UserQuestion
 // @Accept json
 // @Produce json
 // @Param request body CreateUserAnswerRequest true "Request body"
 // @Success 200 {object} CreateUserAnswerResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /userAnswer [post]
+// @Router /userQuestion [post]
 func CreateUserAnswerHandler(ctx *gin.Context) {
 	request := CreateUserAnswerRequest{}
 
@@ -36,22 +36,22 @@ func CreateUserAnswerHandler(ctx *gin.Context) {
 
 	fmt.Println("CreateUserAnswer - Depois da validação")
 
-	userAnswer := schemas.UserAnswer{
+	userQuestion := schemas.UserQuestion{
 		IdQuestion: request.IdQuestion,
 		IdAnswer1:  request.IdAnswer1,
 		IdAnswer2:  request.IdAnswer2,
 		IdAnswer3:  request.IdAnswer3,
 		IdAnswer4:  request.IdAnswer4,
 	}
-	fmt.Println("DBG==depois de popular a instancia de userAnswer")
+	fmt.Println("DBG==depois de popular a instancia de userQuestion")
 
-	if err := db.Create(&userAnswer).Error; err != nil {
+	if err := db.Create(&userQuestion).Error; err != nil {
 		fmt.Println("DBG==entrou no metodo de erro quando foi salvar no DB")
-		logger.Errorf("error creating userAnswer: %v", err.Error())
-		sendError(ctx, http.StatusInternalServerError, "error creating userAnswer on database")
+		logger.Errorf("error creating userQuestion: %v", err.Error())
+		sendError(ctx, http.StatusInternalServerError, "error creating userQuestion on database")
 		return
 	}
 	fmt.Println("DBG==Depois de gravar no DB")
 
-	sendSuccess(ctx, "create-userAnswer", userAnswer)
+	sendSuccess(ctx, "create-userQuestion", userQuestion)
 }
