# handler/userAnswer/deleteUserAnswer.go
@@ -1,4 +1,4 @@
-package userAnswer
+package userQuestion
 
 import (
 	"fmt"
@@ -10,34 +10,34 @@ import (
 
 // @BasePath /api/v1
 
-// @Summary Delete userAnswer
-// @Description Delete a job userAnswer
-// @Tags UserAnswer
+// @Summary Delete userQuestion
+// @Description Delete a job userQuestion
+// @Tags UserQuestion
 // @Accept json
 // @Produce json
-// @Param id query string true "UserAnswer identification"
+// @Param id query string true "UserQuestion identification"
 // @Success 200 {object} DeleteUserAnswerResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Router /userAnswer [delete]
+// @Router /userQuestion [delete]
 func DeleteUserAnswerHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
 		sendError(ctx, http.StatusBadRequest, errParamIsRequired("id", "queryParameter").Error())
 		return
 	}
-	userAnswer := schemas.UserAnswer{}
+	userQuestion := schemas.UserQuestion{}
 
-	// Find userAnswer
-	if err := db.First(&userAnswer, id).Error; err != nil {
-		sendError(ctx, http.StatusNotFound, fmt.Sprintf("userAnswer with id: %s not found", id))
+	// Find userQuestion
+	if err := db.First(&userQuestion, id).Error; err != nil {
+		sendError(ctx, http.StatusNotFound, fmt.Sprintf("userQuestion with id: %s not found", id))
 		return
 	}
 
-	// Delete userAnswer
-	if err := db.Delete(&userAnswer).Error; err != nil {
-		sendError(ctx, http.StatusInternalServerError, fmt.Sprintf("error deleting userAnswer with id: %s", id))
+	// Delete userQuestion
+	if err := db.Delete(&userQuestion).Error; err != nil {
+		sendError(ctx, http.StatusInternalServerError, fmt.Sprintf("error deleting userQuestion with id: %s", id))
 		return
 	}
-	sendSuccess(ctx, "delete-userAnswer", userAnswer)
+	sendSuccess(ctx, "delete-userQuestion", userQuestion)
 }
