# handler/userAnswer/listUserAnswer.go
@@ -1,4 +1,4 @@
-package userAnswer
+package userQuestion
 
 import (
 	"fmt"
@@ -12,20 +12,20 @@ import (
 
 // @Summary List usersAnswer
 // @Description List all job usersAnswer
-// @Tags UserAnswer
+// @Tags UserQuestion
 // @Accept json
 // @Produce json
 // @Success 200 {object} ListUsersAnswerResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /usersAnswer [get]
 func ListUsersAnswerHandler(ctx *gin.Context) {
-	fmt.Println("DBG==List UsersAnswer ")
-	usersAnswer := []schemas.UserAnswer{}
-	fmt.Println("DBG==UsersAnswer: ", usersAnswer)
+	fmt.Println("DBG==List UsersQuestion ")
+	usersAnswer := []schemas.UserQuestion{}
+	fmt.Println("DBG==UsersQuestion: ", usersAnswer)
 	if err := db.Find(&usersAnswer).Error; err != nil {
-		fmt.Println("DBG==Encontrou um erro ao listar as UsersAnswer")
-		sendError(ctx, http.StatusInternalServerError, "error listing UsersAnswer")
+		fmt.Println("DBG==Encontrou um erro ao listar as UsersQuestion")
+		sendError(ctx, http.StatusInternalServerError, "error listing UsersQuestion")
 		return
 	}
-	sendSuccess(ctx, "list-UsersAnswer", usersAnswer)
+	sendSuccess(ctx, "list-UsersQuestion", usersAnswer)
 }
