# router/routes.go
@@ -8,7 +8,7 @@ import (
 	handlerOpening "github.com/eduardohass/dica/handler/opening"
 	handlerQuestion "github.com/eduardohass/dica/handler/question"
 	handlerQuestionAnswer "github.com/eduardohass/dica/handler/questionAnswer"
-	handlerUserAnswer "github.com/eduardohass/dica/handler/userAnswer"
+	handlerUserAnswer "github.com/eduardohass/dica/handler/userQuestion"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -62,12 +62,12 @@ func initializeRoutes(router *gin.Engine) {
 		v1.POST("letterAnswer", handlerLetterAnswer.CreateLetterAnswerHandler)
 		v1.PUT("letterAnswer", handlerLetterAnswer.UpdateLetterAnswerHandler)
 		v1.DELETE("letterAnswer", handlerLetterAnswer.DeleteLetterAnswerHandler)
-		// UserAnswer
+		// UserQuestion
 		v1.GET("usersAnswer", handlerUserAnswer.ListUsersAnswerHandler)
-		v1.GET("userAnswer", handlerUserAnswer.ShowUserAnswerHandler)
-		v1.POST("userAnswer", handlerUserAnswer.CreateUserAnswerHandler)
-		v1.PUT("userAnswer", handlerUserAnswer.UpdateUserAnswerHandler)
-		v1.DELETE("userAnswer", handlerUserAnswer.DeleteUserAnswerHandler)
+		v1.GET("userQuestion", handlerUserAnswer.ShowUserAnswerHandler)
+		v1.POST("userQuestion", handlerUserAnswer.CreateUserAnswerHandler)
+		v1.PUT("userQuestion", handlerUserAnswer.UpdateUserAnswerHandler)
+		v1.DELETE("userQuestion", handlerUserAnswer.DeleteUserAnswerHandler)
 	}
 	// Initialize Swagger
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
